Sat Jul 14 00:17:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Get rid of the
	  TopValueMatchSpy in favour of a new function
	  "get_most_frequent_items", which processes the output of a
	  ValueCountMatchSpy.  Add a TermCountMatchSpy which counts the
	  occurrences of terms with a given prefix, and gives output in
	  the same form as ValueCountMatchSpy.  Add convenience methods
	  ValueCountMatchSpy::get_top_values() and
	  TermCountMatchSpy::get_top_terms() which use this to return the
	  most frequent items seen by the matchspy.
	* tests/api_wrdb.cc: Test the ValueCountMatchSpy, and the
	  get_most_frequent_items() function.

Fri Jul 13 18:57:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/andpostlist.cc,tests/api_anydb.cc: Improve the lower
	  bound on the number of matching documents for an AND query - if
	  the sum of the lower bounds for the two sides is greater than the
	  number of documents in the database, then some of them must have
	  both terms.  This greatly improves the lower bound for queries of
	  the form "<alldocuments> FILTER foo" (since FILTER is a subclass
	  of AND, and uses the same method), but is probably a useful
	  improvement elsewhere.

Fri Jul 13 17:53:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/valueranges.rst: Correct out-of-date reference to
	  float_to_string, spotted by Enrico Zini.

Wed Jul 11 22:54:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h,tests/api_wrdb.cc:
	  Move ValueAndFrequency out of the TopValueMatchSpy class - it
	  doesn't seem to be possible to wrap it with swig without doing
	  this, and it doesn't seem much less tidy.

Wed Jul 11 18:03:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Split MatchSpy into a
	  base class (ValueCountMatchSpy), which just counts the values in