@@ -1,3 +1,11 @@
+Tue Jul 17 11:10:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* api/matchspy.cc,include/xapian/matchspy.h: Make
+	  get_most_frequent_items() private, since I'm not convinced it's
+	  useful to make it available externally.  We can always make it
+	  public again if it's useful to do so.
+	* test/api_wrdb.cc: Update tests accordingly.
+
 Sat Jul 14 00:17:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* api/matchspy.cc,include/xapian/matchspy.h: Get rid of the
